--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root--backdorp9"></div>
+    <div id="root--ModelOverlay9"></div>
     <div class="container" id="root"></div>
     <!--
       This HTML file is a template.
